ref(be): optimoze prompt
